# todo-rust

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SharedTaskfile.yml  Taskfile.yml  Trunk.toml  docker-compose.yml
.github/workflows/: rust.yml  test.yml
client/: Cargo.toml  Dockerfile  Taskfile.yml  index.html  tailwind.config.js
client/scripts/: build-release.sh
client/src/: main.rs  router.rs
client/src/app/: mod.rs
client/src/app/components/: header.rs  mod.rs  side_nav.rs
client/src/app/home/: mod.rs
client/src/app/home/components/: todo.rs
client/src/entities/: mod.rs  todo.rs
docker/postgres/pg-init-scripts/: create-multiple-postgresql-databases.sh
scripts/: k6-install.sh
server/: .gitignore  Cargo.toml  Dockerfile  Taskfile.yml
server/crud/: Cargo.toml
server/crud/src/: controller.rs  lib.rs  web_error.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs  todo.rs  utils.rs
server/k6/todo/: create.js  list.js
server/migration/src/: lib.rs  m20220101_000001_create_table_todo.rs
server/src/: lib.rs  main.rs
server/src/todo/: controller.rs  service.rs
shared/: Cargo.toml
shared/src/: lib.rs
traefik/: config.yml
