[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
reqwasm = "0.2"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
log = "0.4.6"
stylist = { version = "0.10", features=["yew_integration"]}
