[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sea-orm = { version = "^0.6", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }
shared = { path = "../shared" }

# bson (required)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rbson = "2.0"
# bin code

# logging lib(required)
log = "0.4"
fast_log="1.3"

uuid = { version = "0.8", features = ["serde", "v4"] }

validator = { version = "0.14", features = ["derive"] }
entity = { path = "./entity" }
migration = { path = "./migration" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crud = { path = "./crud" }
actix-cors = "0.6"
