
[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }

[dependencies.sea-orm]
# path = "../../../" # remove this line in your own project
version = "^0.6.0"
features = [
  "macros",
  "debug-print",
  "runtime-actix-rustls",
  "sqlx-postgres",
]
default-features = false
